--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -44,7 +44,10 @@
             "scripts": [
               "src/assets/js/jquery.min.js",
               "src/assets/js/bootstrap.bundle.min.js",
-              "src/assets/js/select2.min.js"
+              "src/assets/js/select2.min.js",
+              "src/asset/js/simplebar.min.js",
+              "src/asset/js/smooth-scroll.polyfills.min.js"
+              "src/"
             ]
           },
           "configurations": {
