file uploader bug fixed

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -31,20 +31,45 @@
               "src/styles.css",
               "src/assets/css/icons.css",
               "src/assets/css/theme.min.css",
+              "src/assets/vendor/filepond/dist/filepond.min.css",
               "src/assets/css/nouislider.min.css",
               "src/assets/css/select2-bootstrap4.css",
               "src/assets/css/select2-bootstrap4.min.css",
               "src/assets/css/simplebar.min.css",
               "src/assets/css/tiny-slider.css",
-              "src/assets/vendor/filepond/dist/filepond.min.css",
               "src/assets/css/nouislider.min.css",
               "src/assets/vendor/leaflet/dist/leaflet.css",
-              "src/assets/vendor/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css"
+              "src/assets/vendor/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css",
+              "src/assets/vendor/flatpickr/dist/flatpickr.min.css",
+              "src/assets/vendor/lightgallery.js/dist/css/lightgallery.min.css",
+              "./node_modules/filepond/dist/filepond.min.css",
+              "./node_modules/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css"
             ],
             "scripts": [
               "src/assets/js/jquery.min.js",
               "src/assets/js/bootstrap.bundle.min.js",
-              "src/assets/js/select2.min.js"
+              "src/assets/js/select2.min.js",
+              "src/assets/js/simplebar.min.js",
+               "src/assets/js/smooth-scroll.polyfills.min.js",
+              "src/assets/vendor/lightgallery.js/dist/js/lightgallery.min.js",
+              "src/assets/js/nouislider.min.js",
+              "src/assets/vendor/lg-fullscreen.js/dist/lg-fullscreen.min.js",
+              "src/assets/vendor/lg-zoom.js/dist/lg-zoom.min.js",
+              "src/assets/vendor/lg-thumbnail.js/dist/lg-thumbnail.min.js",
+              "src/assets/js/tiny-slider.js",
+              "src/assets/js/parallax.min.js",
+              "src/assets/vendor/leaflet/dist/leaflet.js",
+              "src/assets/vendor/flatpickr/dist/flatpickr.min.js",
+              "src/assets/vendor/flatpickr/dist/plugins/rangePlugin.js",
+              "src/assets/vendor/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.min.js",
+              "src/assets/vendor/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js",
+              "src/assets/vendor/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js",
+              "src/assets/vendor/filepond-plugin-image-crop/dist/filepond-plugin-image-crop.min.js",
+              "src/assets/vendor/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.min.js",
+              "src/assets/vendor/filepond-plugin-image-transform/dist/filepond-plugin-image-transform.min.js",
+              "src/assets/vendor/filepond/dist/filepond.min.js",
+              "src/assets/vendor/cleave.js/dist/cleave.min.js",
+              "src/assets/js/theme.min.js"
             ]
           },
           "configurations": {
