--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ng-select/ng-select": "^7.3.0",
+    "filepond": "^4.30.3",
+    "filepond-plugin-file-validate-type": "^1.2.6",
+    "filepond-plugin-image-edit": "^1.6.3",
+    "filepond-plugin-image-preview": "^4.6.10",
     "jquery": "^3.6.0",
     "ng2-select2": "^1.0.0-beta.16",
+    "ngx-filepond": "^6.0.1",
     "rxjs": "~6.6.0",
     "select2": "^4.1.0-rc.0",
     "tslib": "^2.0.0",
