--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,10 +16,13 @@
     "@angular/compiler": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/forms": "~11.2.0",
+    "@angular/localize": "~11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ng-select/ng-select": "^7.3.0",
+    "bootstrap": "^4.5.0",
     "filepond": "^4.30.3",
     "filepond-plugin-file-validate-type": "^1.2.6",
     "filepond-plugin-image-edit": "^1.6.3",
