--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.0",
+    "@angular/cdk": "^11.2.0",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
     "@angular/core": "~11.2.0",
@@ -22,6 +23,7 @@
     "@angular/router": "~11.2.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ng-select/ng-select": "^7.3.0",
+    "angular-bootstrap-md": "^11.0.0",
     "bootstrap": "^4.5.0",
     "filepond": "^4.30.3",
     "filepond-plugin-file-validate-type": "^1.2.6",
