--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.6.0",
     "ng2-select2": "^1.0.0-beta.16",
     "ngx-filepond": "^6.0.1",
+    "ngx-lightbox": "^2.5.2",
     "rxjs": "~6.6.0",
     "select2": "^4.1.0-rc.0",
     "tslib": "^2.0.0",
