--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -46,6 +46,7 @@
               "node_modules/filepond/dist/filepond.min.css",
               "node_modules/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css",
               "node_modules/ngx-lightbox/lightbox.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [
               "src/assets/js/jquery.min.js",
