--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -105,6 +105,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>docker-dbay-spring</finalName>
     </build>
 
 </project>
