--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@ng-select/ng-select": "^7.3.0",
     "angular-bootstrap-md": "^11.0.0",
+    "angular-notifier": "^9.1.0",
     "bootstrap": "^4.5.0",
     "filepond": "^4.30.3",
     "filepond-plugin-file-validate-type": "^1.2.6",
