--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/dbayTest?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/dbayTest2?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/dbay?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysql
