--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/dbayTest2?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/dbay?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dbayTest3?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/dbay?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
 
-server.port=8081
+#server.port=8081
 
 email.link=http://192.168.1.4:4200/#/forgot_password
 image.path=C:\\xampp\\htdocs\\Dbay
